--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 *.html
-*.min.js
-*.min.js.map
-.idea
 config.js
+public/views/**/*.min.js
+public/views/**/*.min.js.map
+.idea
 bower_components
 node_modules
 public/vendor
